# FFB_Glove

./: .gitignore  ffb_enviroment.urdf  glove.urdf  hand.urdf  hand_description.yaml  readme.txt
dual_sense_reader/: package.xml  setup.cfg  setup.py
dynamixel_manager/: package.xml  setup.cfg  setup.py
dynamixel_manager/dynamixel_manager/: dynamixel_manager.py
encoder_reader/: package.xml  setup.py
encoder_reader/encoder_reader/: encoder_reader.py
force_feedback/: package.xml  setup.cfg  setup.py
force_feedback/force_feedback/: force_feedback.py  force_feedback_old.py
gazebo_bridge/: package.xml  setup.py
gazebo_bridge/gazebo_bridge/: gazebo_bridge.py
glove_bringup/: package.xml  setup.cfg  setup.py
glove_bringup/launch/: glove_system.launch.yaml
glove_description/: CMakeLists.txt  package.xml  shapes.sdf
glove_description/config/: controllers.yaml
glove_description/urdf/: glove.urdf  gloveold.urdf  hand_description.yaml  scale.py
haply_connection_manager/: package.xml  setup.cfg  setup.py
haply_connection_manager/haply_connection_manager/: haply_connection_manager.py
imu/: package.xml  setup.py
imu/imu/: imu.py
launch/: all.launch.py  forces.launch.py  glove_gazebo.launch.py  glove_visualiser.py  vibration.launch.py  visualisation.launch.py
shared_config/: package.xml  setup.cfg  setup.py
shared_config/config/: glove_settings.json
state_manager/: package.xml  setup.py
state_manager/state_manager/: state_manager.py
vibration_contactor/: package.xml  setup.cfg  setup.py
vibration_contactor/vibration_contactor/: vibration_contactor.py
vibration_manager/: CMakeLists.txt  package.xml
vibration_manager/audio/: vibration_loop.flac
vibration_manager/src/: vibration_manager.cpp
