<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>encoder_reader</name>
  <version>0.0.1</version>
  <description>This package reads the encoder values presented through serial and publishes them to a topic</description>
  <maintainer email="m25651501@edu.kit">Harry Stone</maintainer>
  <license>MIT</license>

  <depend>shared_config</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
