<?xml version="1.0"?>
<package format="3">
  <name>haply_connection_manager</name>
  <version>0.0.0</version>
  <description>Haply websocket bridge</description>

  <maintainer email="harrystone3301@gmail.com">Harry Stone</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS deps -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- System Python deps -->
  <exec_depend>python3-websockets</exec_depend>

  <!-- Tests -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
